feat: add monitor editing and deletion
